// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`NFSRecentSearchKeyword component should render empty recent search keyword 1`] = `
<View
  style={
    Object {
      "paddingHorizontal": 12,
    }
  }
>
  <View
    style={
      Object {
        "alignItems": "center",
        "flexDirection": "row",
        "height": 60,
      }
    }
  >
    <Text
      style={
        Array [
          Object {
            "color": "#2F3945",
            "fontFamily": "OpenSans-SemiBold",
            "fontSize": 14,
          },
          Object {},
          Object {
            "flex": 1,
          },
        ]
      }
    >
      Recent Search
    </Text>
  </View>
  <Text
    style={
      Array [
        Object {
          "color": "#2F3945",
          "fontFamily": "OpenSans-Regular",
          "fontSize": 16,
        },
        Object {},
        Object {
          "color": "#627286",
          "margin": 24,
          "textAlign": "center",
        },
      ]
    }
  >
    No recent search
  </Text>
</View>
`;

exports[`NFSRecentSearchKeyword component should render list recent search keyword 1`] = `
<View
  style={
    Object {
      "paddingHorizontal": 12,
    }
  }
>
  <View
    style={
      Object {
        "alignItems": "center",
        "flexDirection": "row",
        "height": 60,
      }
    }
  >
    <Text
      style={
        Array [
          Object {
            "color": "#2F3945",
            "fontFamily": "OpenSans-SemiBold",
            "fontSize": 14,
          },
          Object {},
          Object {
            "flex": 1,
          },
        ]
      }
    >
      Recent Search
    </Text>
    <View
      accessible={true}
      collapsable={false}
      focusable={true}
      onClick={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        Object {
          "alignSelf": "center",
          "justifyContent": "center",
          "opacity": 1,
        }
      }
      testID="recent_search_keyword.btn_clear"
    >
      <View
        style={
          Object {
            "alignItems": "center",
            "flexDirection": "row",
            "justifyContent": "center",
          }
        }
        testID="button_wrapper.content"
      >
        <Text
          style={
            Array [
              Object {
                "color": "#2F3945",
                "fontFamily": "OpenSans-SemiBold",
                "fontSize": 12,
              },
              Object {},
              Object {
                "color": "#7843DD",
                "marginRight": 4,
              },
            ]
          }
        >
          CLEAR
        </Text>
      </View>
    </View>
  </View>
  <View>
    <View
      accessibilityState={
        Object {
          "disabled": false,
        }
      }
      accessible={true}
      collapsable={false}
      focusable={true}
      onClick={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        Object {
          "alignItems": "center",
          "flexDirection": "row",
          "height": null,
          "opacity": 1,
          "paddingHorizontal": 12,
          "paddingRight": 8,
          "paddingVertical": 12,
        }
      }
      testID="recent_search_keyword.item_0"
    >
      <View
        style={
          Object {
            "flex": 1,
          }
        }
      >
        <Text
          numberOfLines={2}
          style={
            Array [
              Object {
                "color": "#2F3945",
                "fontFamily": "OpenSans-Regular",
                "fontSize": 16,
              },
              Object {},
              undefined,
            ]
          }
        >
          hello
        </Text>
      </View>
      <View
        accessible={true}
        collapsable={false}
        focusable={true}
        onClick={[Function]}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          Object {
            "opacity": 1,
          }
        }
        testID="recent_search_keyword.btn_delete_item_0"
      >
        <View
          accessibilityState={
            Object {
              "disabled": true,
            }
          }
          accessible={true}
          collapsable={false}
          focusable={false}
          hitSlop={
            Object {
              "bottom": 10,
              "left": 10,
              "right": 10,
              "top": 10,
            }
          }
          onClick={[Function]}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            Object {
              "opacity": 1,
            }
          }
        >
          <View
            style={
              Array [
                Object {
                  "alignItems": "center",
                  "flexDirection": "row",
                },
                undefined,
                Object {
                  "backgroundColor": undefined,
                },
              ]
            }
          >
            <View
              style={
                Array [
                  undefined,
                  undefined,
                  undefined,
                ]
              }
            >
              <View>
                <RNSVGSvgView
                  align="xMidYMid"
                  bbHeight={16}
                  bbWidth={16}
                  color={4281284933}
                  focusable={false}
                  height={16}
                  meetOrSlice={0}
                  minX={0}
                  minY={0}
                  style={
                    Array [
                      Object {
                        "backgroundColor": "transparent",
                        "borderWidth": 0,
                      },
                      Object {},
                      Object {
                        "flex": 0,
                        "height": 16,
                        "width": 16,
                      },
                    ]
                  }
                  tintColor={4281284933}
                  vbHeight={24}
                  vbWidth={24}
                  width={16}
                >
                  <RNSVGGroup>
                    <RNSVGPath
                      d="M13.41 12l4.3-4.29a1 1 0 10-1.42-1.42L12 10.59l-4.29-4.3a1 1 0 00-1.42 1.42l4.3 4.29-4.3 4.29a1 1 0 000 1.42 1 1 0 001.42 0l4.29-4.3 4.29 4.3a1 1 0 001.42 0 1 1 0 000-1.42z"
                      fill={
                        Array [
                          2,
                        ]
                      }
                      propList={
                        Array [
                          "fill",
                        ]
                      }
                    />
                  </RNSVGGroup>
                </RNSVGSvgView>
              </View>
            </View>
          </View>
        </View>
      </View>
    </View>
  </View>
</View>
`;

exports[`NFSRecentSearchKeyword component should render loading recent search keyword 1`] = `
<View
  style={
    Object {
      "paddingHorizontal": 12,
    }
  }
>
  <View
    style={
      Object {
        "alignItems": "center",
        "flexDirection": "row",
        "height": 60,
      }
    }
  >
    <Text
      style={
        Array [
          Object {
            "color": "#2F3945",
            "fontFamily": "OpenSans-SemiBold",
            "fontSize": 14,
          },
          Object {},
          Object {
            "flex": 1,
          },
        ]
      }
    >
      Recent Search
    </Text>
  </View>
  <ActivityIndicator
    color="#B2BDCD"
    style={
      Object {
        "alignItems": "center",
        "height": 44,
        "justifyContent": "center",
      }
    }
    testID="loading_indicator"
  />
</View>
`;
